Adicionado banco de dados
* Função de get all
* Função de create
